<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/fragmentUserNames">

    <TextView
        android:id="@+id/txtViewPlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:hint="@string/p1"
        android:text="@string/playerone"
        android:textColor="#FF1744"
        android:textColorHint="#00E40909"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editTxtPlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="140dp"
        android:layout_toRightOf="@id/txtViewPlayerOne"
        android:ems="10"
        android:hint="@string/enter_name_of_player_one"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/txtViewPlayerOne"
        android:text="@string/enter_name_of_player_one"
        android:textSize="14sp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/txtViewPlayerOne" />

    <TextView
        android:id="@+id/txtViewPlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewPlayerOne"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/p2"
        android:text="@string/player_two"
        android:textColor="#64DD17"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp" />

    <EditText
        android:id="@+id/editTxtPlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTxtPlayerOne"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@id/txtViewPlayerTwo"
        android:ems="10"
        android:hint="@string/enter_name_of_player_Two"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/txtViewPlayerTwo"
        android:text="@string/enter_name_of_player_Two"
        android:textSize="14sp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/txtViewPlayerTwo" />


    <Button
        android:id="@+id/gogobutton"
        android:layout_width="261dp"
        android:layout_height="111dp"
        android:layout_below="@id/editTxtPlayerTwo"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/start_game"
        android:foreground="@drawable/boutongo"
        android:layout_marginLeft="30dp"/>

</RelativeLayout>